# azure-sdk-for-rust-proto

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: ci.yml
sdk/client_builder_method_builder/: Cargo.toml
sdk/client_builder_method_builder/examples/: set_secret_client_builder.rs
sdk/client_builder_method_builder/src/: lib.rs  models.rs
sdk/client_method_options_builder/: Cargo.toml  README.md
sdk/client_method_options_builder/examples/: set_secret_options_builder.rs
sdk/client_method_options_builder/src/: lib.rs
sdk/client_new_method_builder/: Cargo.toml
sdk/client_new_method_builder/examples/: set_secret_method_builder.rs
sdk/client_new_method_builder/src/: lib.rs
sdk/client_new_method_params/: Cargo.toml  README.md
sdk/client_new_method_params/examples/: set_secret.rs  set_secret_params.rs
sdk/client_new_method_params/src/: lib.rs  models.rs
sdk/client_new_method_params_context/: Cargo.toml  README.md
sdk/client_new_method_params_context/examples/: conditionally_update_secret_properties_params_context.rs  set_secret_params_context.rs  set_secret_with_context.rs  update_secret_properties_params_context.rs
sdk/client_new_method_params_context/src/: lib.rs  models.rs  response.rs
sdk/client_new_method_params_struct/: Cargo.toml  README.md
sdk/client_new_method_params_struct/examples/: set_secret_params_struct.rs
sdk/client_new_method_params_struct/src/: lib.rs
sdk/core/: Cargo.toml
sdk/core/examples/: cancellation.rs
sdk/core/src/: auth.rs  context.rs  error.rs  etag.rs  headers.rs  json.rs  lib.rs  pipeline.rs  request.rs  request_content.rs  response.rs  stream.rs  trace.rs
sdk/core/src/options/: mod.rs  retry.rs  transport.rs
sdk/core/src/policies/: auth.rs  custom_header.rs  mod.rs  transport.rs
sdk/core_macros/: Cargo.toml
sdk/core_macros/src/: lib.rs
sdk/identity/: Cargo.toml
sdk/identity/src/: lib.rs
sdk/keyvault/: Cargo.toml  README.md
sdk/keyvault/examples/: set_secret_options_builder.rs
sdk/keyvault/src/: lib.rs
