[workspace]
resolver = "2"
members = [
    "sdk/*",
]

[workspace.package]
rust-version = "1.76"

[workspace.dependencies]
async-trait = "0.1"
azure_core = { version = "0.1.0", path = "sdk/core" }
azure_identity = { version = "0.1.0", path = "sdk/identity" }
bytes = "1.0"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.5"

[workspace.lints.rust]
dead_code = "allow"
