[workspace]
resolver = "2"
members = [
    "sdk/*",
]

[workspace.package]
rust-version = "1.76"

[workspace.dependencies]
async-trait = "0.1.77"
azure_core = { version = "0.1.0", path = "sdk/core" }
azure_core_macros = { version = "0.1.0", path = "sdk/core_macros" }
azure_identity = { version = "0.1.0", path = "sdk/identity" }
bytes = "1.5.0"
futures = "0.3.30"
proc-macro2 = "1.0.81"
quote = "1.0.36"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
syn = "2.0.60"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"

[workspace.lints.rust]
dead_code = "allow"
