[package]
name = "client_method_options_builder"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
azure_core = { workspace = true, features = ["builders", "context"] }
serde = { workspace = true }

[dev-dependencies]
azure_identity = { workspace = true }
tokio = { workspace = true }
