[package]
name = "azure_client_new_methods_params_context"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
azure_core = { workspace = true, features = ["context"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
azure_identity = { workspace = true }
tokio = { workspace = true }
