[package]
name = "azure_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[features]
builder = []
context = []

[lints]
workspace = true
