[package]
name = "azure_core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }

[lints]
workspace = true
